--- a/RUI.cbp
+++ b/RUI.cbp
@@ -13,7 +13,12 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
+					<Add directory="C:/wxWidgets-3.1.3/lib/gcc_dll/mswu" />
 				</Compiler>
+				<Linker>
+					<Add library="libwxmsw31u.a" />
+					<Add directory="C:/wxWidgets-3.1.3/lib/gcc_dll" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/ONSGUI" prefix_auto="1" extension_auto="1" />
@@ -22,25 +27,33 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add directory="C:/wxWidgets-3.1.3/lib/gcc_dll/mswu" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="libwxmsw31u.a" />
+					<Add directory="C:/wxWidgets-3.1.3/lib/gcc_dll" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-std=c++11" />
-			<Add directory="C:/SDL2-2.0.12/x86_64-w64-mingw32/include" />
+			<Add option="-D__GNUWIN32__" />
+			<Add option="-D__WXMSW__" />
+			<Add option="-DWXUSINGDLL" />
+			<Add option="-DwxUSE_UNICODE" />
+			<Add directory="C:/SDL2-2.0.12/i686-w64-mingw32/include" />
+			<Add directory="C:/wxWidgets-3.1.3/include" />
 		</Compiler>
+		<ResourceCompiler>
+			<Add directory="C:/wxWidgets-3.1.3/include" />
+		</ResourceCompiler>
 		<Linker>
-			<Add library="gdi32" />
-			<Add library="user32" />
-			<Add library="kernel32" />
-			<Add library="comctl32" />
+			<Add option="-mthreads" />
 			<Add library="SDL2" />
 			<Add library="SDL2main" />
-			<Add directory="C:/SDL2-2.0.12/x86_64-w64-mingw32/lib" />
+			<Add directory="C:/SDL2-2.0.12/i686-w64-mingw32/lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
 		<Unit filename="mein.cpp" />
